--- a/css/main.css
+++ b/css/main.css
@@ -82,22 +82,31 @@ footer {
 }
 @media (min-width: 640px) {
   :root {
-    --body-measure: 60%;
+    --body-measure: 55%;
   }
   .container {
     /* column-gap: 1rem; */
     /* margin: 0; */
   }
 }
-@media (min-width: 1000px) {
-  .container .left-sidebar,
+@media (min-width: 640px) {
   .container .right-sidebar {
+    display: flex;
+  }
+}
+@media (min-width: 1000px) {
+  :root {
+    --body-measure: 55%;
+  }
+
+  .container .left-sidebar {
     display: flex;
   }
 }
 @media (min-width: 3000px) {
   :root {
-    --body-measure: calc(3000px * 0.6);
+    --body-percent: 0.67;
+    --body-measure: calc(3000px * var(--body-percent));
   }
   .container {
     grid-template: auto 1fr auto / minmax(0, 1fr) var(--body-measure) minmax(0, 1fr);
@@ -193,29 +202,34 @@ figure {
 aside[name] {
   display: none;
 }
+span[name]::after {
+  display: none;
+}
 @media (min-width: 640px) {
-/* @media (min-width: 768px) { */
-  body {
+  main {
+    counter-reset: sidenoteCount 0;
+  }
+  .right-sidebar {
     counter-reset: sidenoteCount 1;
   }
   span[name]::after {
     vertical-align: super;
     display: inline;
     font-size: 0.5em;
+    counter-increment: sidenoteCount;
     content: " " counter(sidenoteCount) "";
   }
   aside[name] {
     display: block;
     position: absolute;
-    width: 15vw;
-    left: 100%;
-    top: auto;
     font-size: 0.75rem;
     line-height: 1.3;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
   aside[name]::before {
     position: absolute;
-    left: -1.25em;
+    left: -1.5em;
     font-size: 0.8em;
     opacity: 0.8;
     content: " " counter(sidenoteCount) ".";
