--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,7 @@ footer {
 
 :root {
   --body-measure: 100%;
+  --sidebar-max: 16rem;
 }
 .body-measure {
   max-width: var(--body-measure);
@@ -82,30 +83,26 @@ footer {
 }
 @media (min-width: 640px) {
   :root {
-    --body-measure: 55%;
+    --body-measure: 67%;
   }
   .container {
     /* column-gap: 1rem; */
     /* margin: 0; */
   }
 }
-@media (min-width: 640px) {
-  .container .right-sidebar {
-    display: flex;
-  }
-}
-@media (min-width: 1000px) {
+@media (min-width: 768px) {
   :root {
     --body-measure: 55%;
   }
-
+}
+@media (min-width: 1000px) {
   .container .left-sidebar {
     display: flex;
   }
 }
 @media (min-width: 3000px) {
   :root {
-    --body-percent: 0.67;
+    --body-percent: 0.55;
     --body-measure: calc(3000px * var(--body-percent));
   }
   .container {
@@ -205,12 +202,15 @@ aside[name] {
 span[name]::after {
   display: none;
 }
-@media (min-width: 640px) {
+@media (min-width: 768px) {
   main {
     counter-reset: sidenoteCount 0;
   }
   .right-sidebar {
     counter-reset: sidenoteCount 1;
+  }
+  .container .right-sidebar {
+    display: flex;
   }
   span[name]::after {
     vertical-align: super;
@@ -226,6 +226,7 @@ span[name]::after {
     line-height: 1.3;
     margin-left: 1rem;
     margin-right: 1rem;
+    max-width: var(--sidebar-max);
   }
   aside[name]::before {
     position: absolute;
@@ -247,7 +248,9 @@ span[name]::after {
   font-size: 0.75rem;
   padding: 1em;
   margin-top: -1.5rem;
-  font-size: 60%;
+  padding-top: 3rem;
+  font-size: 70%;
+  max-width: var(--sidebar-max);
 }
 .toc ol {
   padding: 0;
