--- a/css/main.css
+++ b/css/main.css
@@ -325,7 +325,7 @@ span[name]::after {
   padding: 1.5rem 0 2rem 0;
   margin-bottom: 1.5rem;
 }
-.masthead h1 {
+.masthead .headline {
   font-size: 3rem;
   font-weight: 800;
   line-height: 0.9;
@@ -342,12 +342,12 @@ span[name]::after {
   }
 }
 @media (min-width: 2000px) {
-  .masthead h1 {
+  .masthead .headline {
     font-size: 4em;
   }
 }
 @media (min-width: 3000px) {
-  .masthead h1 {
+  .masthead .headline {
     font-size: 5em;
   }
 }
