--- a/css/main.css
+++ b/css/main.css
@@ -261,11 +261,29 @@ span[name]::after {
 }
 .toc ol > li {
   font-weight: 800;
+  letter-spacing: 0.13em;
+  text-transform: uppercase;
+  line-height: 1.2;
 }
 .toc ol > li li {
-  font-weight: normal;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  text-transform: none;
+  line-height: 1.3;
 }
-.header-anchor {
+.toc ol > li li li {
+  font-weight: normal;
+  opacity: 0.6;
+  letter-spacing: 0.03em;
+  text-transform: none;
+  line-height: 1.3;
+  margin-bottom: 0;
+}
+.toc ol ol li {
+  line-height: 1.2;
+  margin-top: 0.5em;
+}
+main .header-anchor {
   position: absolute;
   margin-left: -0.75em;
   font-size: 75%;
