--- a/css/main.css
+++ b/css/main.css
@@ -259,29 +259,27 @@ span[name]::after {
 .toc ol > ol {
   margin-bottom: 0;
 }
-.toc ol > li {
+.toc ol li {
   font-weight: 800;
   letter-spacing: 0.13em;
   text-transform: uppercase;
   line-height: 1.2;
 }
-.toc ol > li li {
-  font-weight: 400;
-  letter-spacing: 0.03em;
-  text-transform: none;
-  line-height: 1.3;
-}
-.toc ol > li li li {
-  font-weight: normal;
-  opacity: 0.6;
-  letter-spacing: 0.03em;
-  text-transform: none;
-  line-height: 1.3;
-  margin-bottom: 0;
-}
 .toc ol ol li {
-  line-height: 1.2;
+  font-weight: normal;
+  letter-spacing: 0.03em;
+  text-transform: none;
+  line-height: 1.3;
+
   margin-top: 0.5em;
+  margin-bottom: 0.5em;
+}
+.toc ol ol ol li {
+  font-weight: normal;
+  line-height: 1.3;
+
+  opacity: 0.6;
+  margin-bottom: 0;
 }
 main .header-anchor {
   position: absolute;
