--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@ body {
 :root {
   --body-measure: 100%;
   --sidebar-max: 16rem;
+  --column-gap: 0;
 }
 .body-measure {
   max-width: var(--body-measure);
@@ -57,6 +58,7 @@ body {
   display: grid;
   grid-template: auto 1fr auto / minmax(0, 1fr) var(--body-measure) minmax(0, 1fr);
   height: 100vh;
+  column-gap: var(--column-gap);
 }
 header {
   grid-column: 1 / 4;
@@ -80,6 +82,8 @@ footer {
 @media (min-width: 640px) {
   :root {
     --body-measure: 67%;
+    /* --column-gap: 0.5rem; */
+    --column-gap: 0;
   }
 }
 @media (min-width: 768px) {
@@ -276,12 +280,23 @@ span[name]::after {
   opacity: 0.6;
   margin-bottom: 0;
 }
-main .header-anchor {
-  position: absolute;
-  margin-left: -0.75em;
-  font-size: 75%;
-  line-height: 1;
-  opacity: 0.3;
+
+/* permalink pilcrow */
+
+.header-anchor {
+  display: none;
+}
+@media (min-width: 640px) {
+  .header-anchor {
+    position: absolute;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: -0.7em;
+    line-height: 1;
+    font-size: 80%;
+    margin-top: 0.2em;
+    opacity: 0.5;
+  }
 }
 
 /* images */
