--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ body {
 }
 .main .w-large {
   grid-column: full;
-  margin: 0;
+  margin: 1em 0;
 }
 @media (min-width: 640px) {
   .main .w-large {
