--- a/css/main.css
+++ b/css/main.css
@@ -56,11 +56,12 @@ body {
 .container {
   display: grid;
   grid-template-rows: min(20rem, calc(30vh + 4rem)) 1fr auto;
-  grid-template-columns: [full-start] 1rem
-                         [left-start] 1fr
-                         [article-start right-start] var(--article-measure)
-                         [article-end left-end] 1fr
-                         [right-end] 1rem [full-end];
+  grid-template-columns:
+    [full-start] 1rem
+    [left-start] 1fr
+    [article-start right-start] var(--article-measure)
+    [article-end left-end] 1fr
+    [right-end] 1rem [full-end];
 
   height: 100vh;
 }
@@ -95,7 +96,7 @@ body {
 .main img.float-right {
   display: block;
   width: 45%;
-  box-shadow: 0px 5px 10px rgba(0,0,0,0.4);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
   border-radius: 0.25em;
   margin: 0.5em;
 }
@@ -210,7 +211,7 @@ figure {
 }
 
 .flex {
-  display: flex
+  display: flex;
 }
 
 .flex-row {
@@ -233,7 +234,7 @@ figure {
   text-align: center;
 }
 
-.w-full	{
+.w-full {
   width: 100%;
 }
 /*
