--- a/css/main.css
+++ b/css/main.css
@@ -504,34 +504,31 @@ footer small {
 /* blockquotes and pull quotes */
 
 blockquote:not(.pullquote) {
-  border-left: 0.25em solid rgba(0, 0, 0, 0.4);
+  border-left: 0.25em solid rgba(0, 0, 0, 0.2);
   padding: 0 1em;
   margin: 1em 0;
 }
 blockquote:not(.pullquote) > * {
   margin: 0;
+  font-size: 1em;
 }
 @media (min-width: 640px) {
   blockquote:not(.pullquote) {
-    padding: 0 2em;
+    padding: 0 1.5em;
   }
 }
 .pullquote {
-  border: none;
-  display: grid;
-  grid-template-columns: min-content 1fr;
-  margin: 1em 2em;
+  border-left: 0.25em solid rgba(0, 0, 0, 0.2);
+  padding: 0 1em;
+  margin: 0;
 }
-.pullquote::before {
-  grid-column: 1;
-  content: "“";
-  font-size: 5em;
-  line-height: 1;
-  opacity: 0.4;
+.pullquote > * {
+  margin: 0;
+  font-size: 1.25em;
 }
 @media (min-width: 640px) {
   .pullquote {
-    padding: 0;
+    padding: 0 1.5em;
     margin: 0 -8vw;
   }
 }
