--- a/css/main.css
+++ b/css/main.css
@@ -533,3 +533,31 @@ blockquote:not(.pullquote) > * {
   letter-spacing: 0.03em;
   -webkit-font-smoothing: subpixel-antialiased;
 }
+
+/* preserve aspect ratio */
+
+[style*="--aspect-ratio"] {
+  margin: 1em 0;
+}
+[style*="--aspect-ratio"] > :first-child {
+  width: 100%;
+}
+[style*="--aspect-ratio"] > img {
+  height: auto;
+} 
+@supports (--custom:property) {
+  [style*="--aspect-ratio"] {
+    position: relative;
+  }
+  [style*="--aspect-ratio"]::before {
+    content: "";
+    display: block;
+    padding-bottom: calc(100% / (var(--aspect-ratio)));
+  }  
+  [style*="--aspect-ratio"] > :first-child {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+  }  
+}
