--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,6 @@ body {
 
 .container {
   font-family: "THICCCBoi", sans-serif;
-  letter-spacing: 0.03em;
   -webkit-font-smoothing: subpixel-antialiased;
   line-height: 1.4;
   color: darkslategrey;
@@ -334,13 +333,13 @@ span[name]::after {
 }
 .toc ol li {
   font-weight: 800;
-  letter-spacing: 0.13em;
+  letter-spacing: 0.10em;
   text-transform: uppercase;
   line-height: 1.2;
 }
 .toc ol ol li {
   font-weight: normal;
-  letter-spacing: 0.03em;
+  letter-spacing: normal;
   text-transform: none;
   line-height: 1.3;
 
@@ -564,7 +563,6 @@ blockquote:not(.pullquote) > * {
 
 .pswp {
   font-family: "THICCCBoi", sans-serif;
-  letter-spacing: 0.03em;
   -webkit-font-smoothing: subpixel-antialiased;
 }
 
